Fixed missing background video and favicon

--- a/views/style.css
+++ b/views/style.css
@@ -40,7 +40,7 @@ body {
   font-family: 'Questrial', helvetica, arial, sans-serif;
   font-size: 1.3rem;
   margin: 5%;
-  background: url("images/bg.png");
+  background: url("https://efimero.github.io/xenia-images/bg.png");
   background-color: #831;
   color: #9fe;
 }
